# csc4350

./: .gitignore  README.md  docker-compose.yml  todos.md
.github/workflows/: ci.yaml  ci.yml
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
api/app/routers/: agents.py  auth.py  configurations.py  users.py
api/tests/: conftest.py  test_agents.py  test_auth.py  test_configurations.py  test_health.py  test_users.py
control-plane/: Dockerfile  README.md  go.mod  go.sum
control-plane/cmd/controlplane/: main.go
control-plane/internal/config/: config.go  config_test.go
control-plane/internal/opamp/: attrs.go  attrs_test.go  server.go  server_test.go
control-plane/internal/reconcile/: reconcile.go  reconcile_test.go
control-plane/internal/selector/: selector.go  selector_test.go
database/: schema.sql  seed.sql
docs/: assignment1-instructions.md  project-selection.md  team-info-and-contract.md
docs/instructions/: project-selection.md  requirements-and-use-cases.md  thinking-about-your-data-model.md  use-cases-and-sequence-diagrams.md  wireframes-test-scenarios-and-test-cases.md
docs/submissions/: data-model.md  project-selection.md  requirements-and-use-cases.md  team-info-and-contract.md  use-cases-and-sequence-diagrams.md  wireframes-test-scenarios-and-test-cases.md
e2e/: run.sh  supervisor.Dockerfile  supervisor.yaml  test_e2e.py
ui/: .env.example  README.md  package-lock.json  package.json
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/lib/: api.ts
(+23 files in other folders)
